[Azure Search] using OpenApi